[project]
name = "dtm"
version = "0.1.0"
description = "Exploration of Diffusion Trajectory Matching"
authors = [
    {name = "Liam Ludington"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "torchaudio (>=2.8.0,<3.0.0)",
    "torchmetrics (>=1.8.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "torchdiffeq (>=0.2.5,<0.3.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "lmdb (>=1.7.3,<2.0.0)",
    "diffusers (>=0.35.1,<0.36.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "certifi (>=2025.8.3,<2026.0.0)",
    "charset-normalizer (>=3.4.3,<4.0.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "fonttools (>=4.59.1,<5.0.0)",
    "idna (>=3.10,<4.0)",
    "kiwisolver (>=1.4.9,<2.0.0)",
    "packaging (>=25.0,<26.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pyparsing (>=3.2.3,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "typing-extensions (>=4.14.1,<5.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "contourpy (==1.0.5)",
    "numpy (==1.23.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
